frontend html location modified

--- a/template/assets/html/index.html
+++ b/template/assets/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>公開匿名聊天室</title>
-    <link rel="stylesheet" href="../assets/css/style.css"/>
+    <link rel="stylesheet" href="../css/style.css"/>
 </head>
 <body>
 <section class="msger">
