--- a/template/assets/html/host.html
+++ b/template/assets/html/host.html
@@ -5,31 +5,31 @@
 
 
   <title>Port Select</title>
-  <link rel="stylesheet" href="../assets/css/hostStyle.css"/>
+  <link rel="stylesheet" href="../css/hostStyle.css"/>
 </head>
 <body>
 
 <p> Select Port</p >
-<a href="./index.html" target="_Blank" >
+<a href="index.html" target="_Blank" >
   <button class= "port" id="5001" onclick="buttonHandle(this)">
     5001
   </button>
 </a >
 <br>
 <br>
-<a href="./index.html" target="_Blank">
+<a href="index.html" target="_Blank">
   <button class= "port" id = "5002" onclick="buttonHandle(this)">
     5002
   </button>
 </a >
 <br>
 <br>
-<a href="./index.html" target="_Blank">
+<a href="index.html" target="_Blank">
   <button class= "port" id = "5003" onclick="buttonHandle(this)">
     5003
   </button>
 </a >
-<script src="../assets/js/portHandle.js" ></script>
+<script src="../js/portHandle.js" ></script>
 <p id="demo"></p >
 
 </body>
