--- a/template/assets/html/index.html
+++ b/template/assets/html/index.html
@@ -37,7 +37,7 @@
             <input id="upload-input" style="position: absolute; opacity: 0;" type="file" accept="image/gif, image/jpg, image/png, image/jpeg" onchange="showImg(this)" multiple />
             <!--<button type="button" id="upload" class="msger-send-btn"> + </button>-->
 
-            <img id="upload" src="../img/upload.jpeg" style="width: 40px; height: 40px; vertical-align: middle;" />
+            <img id="upload" src="../../img/upload.jpeg" style="width: 40px; height: 40px; vertical-align: middle;" />
 
         </div>
         <div id="imgContainer" style="margin-top: 10px;"></div>
