--- a/template/assets/css/style.css
+++ b/template/assets/css/style.css
@@ -172,11 +172,60 @@ body {
 	color: gray;
 }
 
+.port-selection{
+	font-size: 2rem;
+	position: relative;
+	width: 50%;
+	height: 400px;
+	top: 20%;
+	margin: auto 0;
+	margin: 0% 25%;
+	background-color: white;
+}
+
+.port-selection div{
+	position: relative;
+	width: 80%;
+	margin: 0 auto;
+	text-align: center;
+}
+
+.cover{
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(100,100,100,0.5)
+}
 
 
 
+root {
+    --body-bg: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    --msger-bg: #fff;
+    --border: 2px solid #ddd;
+    --left-msg-bg: #ececec;
+    --right-msg-bg: #579ffb;
+}
 
 
+
+.port {
+	font-size: 1rem;
+    border-radius: 25px;
+    padding: 20px;
+    width: 80px;
+    height: 60px;
+    margin-left: 10px;
+    background: rgb(0, 196, 65);
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background 0.23s;
+}
+
+.port:hover {
+    background: rgb(0, 180, 50);
+}
 
 
 
