--- a/template/assets/html/index.html
+++ b/template/assets/html/index.html
@@ -43,7 +43,7 @@
     <!--chat block-->
 
     <div class="msger-inputarea">
-        <input type="text" class="msger-input" contenteditable="true" id="msg" placeholder="say hi to every one!">
+        <input type="text" class="msger-input" contenteditable="true" id="msg" value="" placeholder="say hi to every one!">
 
         <!-- button for send message -->
         <button type="button" id="send" class="msger-send-btn">Send</button>
